--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -5,15 +5,27 @@
 
 /* applies to any <p> descendants of an element of class "example-class-selector" */
 .example-class-selector p {
-	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
+	/* Colors are in hexadecimal: http://www.colorpicker.com/ */
 	color: #CC00AA;
 }
 
 /* this style exists to make it obvious that you've successfully linked
    the CSS to the page. feel free to remove it once the link is working. */
 body {
-     border: 1px dotted gray;
      padding: 20px;
+}
+
+p {
+    font-variant: small-caps;
+		text-align: center;
+}
+
+h4 {
+	text-align: center;
+}
+
+a {
+	color: black;
 }
 
 .jumbotron {
@@ -24,11 +36,24 @@ body {
 .jumbotron:after {
      content:"";
      background: url("http://lorempixel.com/1140/283");
+		 -webkit-filter: grayscale(100%);
      opacity: 0.2;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;
      position: absolute;
-     z-index: -1;	
+     z-index: -1;
+}
+
+.project {
+    margin-left: auto;
+		margin-right: auto;
+		background-color: rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    width: 525px;
+}
+
+.project p {
+    font-variant: small-caps;
 }
